--- a/views/contacto.html
+++ b/views/contacto.html
@@ -16,7 +16,7 @@
 
         <nav>
             <ul>
-                <li><a href="../Index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../views/productos.html">Galeria</a></li>
                 <li><a href="../views/presupuesto.html">Presupuestos</a></li>
                 <li><a href="../views/contacto.html">Contacto</a></li>
@@ -57,4 +57,5 @@
     <p>Desarrollado por Leonel Ruz</p>
     
   </footer>
+
 </html>
