--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -16,7 +16,7 @@
 
         <nav>
             <ul>
-                <li><a href="../Index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../views/productos.html">Galeria</a></li>
                 <li><a href="../views/presupuesto.html">Presupuestos</a></li>
                 <li><a href="../views/contacto.html">Contacto</a></li>
@@ -66,4 +66,5 @@
 
     
 </body>
+
 </html>
